--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install zsh
+      run: sudo apt install -y zsh
     - name: Build
       run: cargo build --verbose
     - name: Run tests
